# Asteroid-Formation-Simulation

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: constants.h  cuda_utils.h  initial_conditions.cpp  initial_conditions.h  integrator.cpp  integrator.h  main.cpp  particle_data.cpp  particle_data.h  simulation.cpp  simulation.h
src/backends/: cpu_n2_backend.cpp  cpu_n2_backend.h  cuda_n2_backend.cu  cuda_n2_backend.h  iphysics_backend.h
